...
        } else {
            navigationItem.rightBarButtonItem = UIBarButtonItem(title: AppStringConstant.cancel.localized, style: .plain, target: self, action: #selector(rightNavBarCancelBtnTapped))
        }
    }
    
    private func addAccessibilityIdentifier() {
        self.view.accessibilityIdentifier = "homeUITest"
        self.reportListTV.accessibilityIdentifier = "reportListTV"
    }
}

//MARK:- Extension for UISearchBar Delegate
//=========================================
...
